# visual-slam-pipeline

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  evaluate_map.py
include/: Config.h  DepthEstimator.h  FeatureExtractor.h  Frame.h  LoopCloser.h  Map.h  MapPoint.h  Optimizer.h  Slam.h  Viewer.h
src/: DepthEstimator.cpp  FeatureExtractor.cpp  Frame.cpp  LoopCloser.cpp  Map.cpp  MapPoint.cpp  Optimizer.cpp  Slam.cpp  Viewer.cpp  main.cpp
